--- a/package.json
+++ b/package.json
@@ -1,49 +1,17 @@
 {
-  "name": "vue-weather-app",
+  "name": "dockernodejs",
   "version": "1.0.0",
-  "private": true,
-  "description": "Weather app using Vue.js, OpenWeatherMap.",
-  "author": "Doğukan Batal <dogukanbatal@gmail.com>",
-  "license": "MIT",
+  "main": "index.js",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "start": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "axios": "^0.19.2",
-    "core-js": "^3.6.4",
-    "less-loader": "^6.0.0",
-    "vue": "^2.6.11",
-    "vue-feather-icons": "^5.0.0",
-    "vuex": "^3.3.0"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.3.0",
-    "@vue/cli-plugin-eslint": "~4.3.0",
-    "@vue/cli-service": "~4.3.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    "express": "^4.21.2",
+    "nodemon": "^3.1.9"
+  }
 }
