--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: "3.8"
 
 services:
   db:
-    image: mysql:8.0.23
+    image: mysql:8
+    restart: always
     environment:
       MYSQL_ROOT_PASSWORD: P@ssword1234
       MYSQL_DATABASE: test
