--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,14 @@ version: "3.8"
 
 services:
   db:
-    image: mysql:8
-    restart: always
+    image: mysql:8.0
     environment:
       MYSQL_ROOT_PASSWORD: P@ssword1234
       MYSQL_DATABASE: test
       MYSQL_USER: makerz
       MYSQL_PASSWORD: P@ssword1234
-    volumes:
-      - ./init-db:/docker-entrypoint-initdb.d
-      - ./db-data:/var/lib/mysql
     ports:
-      - '3306:3306'
+      - "3306:3306"
     networks:
       - mynetwork
 
@@ -24,8 +20,9 @@ services:
       DB_USER: makerz
       DB_PASSWORD: P@ssword1234
       DB_DATABASE: test
+      APP_VERSION: 1.0.2
     ports:
-      - '5000:5000'
+      - "5000:5000"
     depends_on:
       - db
     networks:
