--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
-# PORT=5000
-# DB_HOST=localhost
-# DB_USER=root
-# DB_PASSWORD=
-# DB_DATABASE=test
-# APP_VERSION=1.0.2
 PORT=5000
-DB_HOST=db
-DB_USER=makerz
-DB_PASSWORD=P@ssword1234
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=
 DB_DATABASE=test
 APP_VERSION=1.0.2
+# PORT=5000
+# DB_HOST=db
+# DB_USER=makerz
+# DB_PASSWORD=P@ssword1234
+# DB_DATABASE=test
+# APP_VERSION=1.0.2
