--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,14 @@ version: "3.8"
 services:
   db:
     image: mysql:8
-    # restart: always
     environment:
       MYSQL_ROOT_PASSWORD: P@ssword1234
       MYSQL_DATABASE: test
       MYSQL_USER: makerz
       MYSQL_PASSWORD: P@ssword1234
+      MYSQL_ROOT_HOST: '%'
+      MYSQL_INITDB_SKIP_TZINFO: "1"
+    command: --default-authentication-plugin=mysql_native_password
     volumes:
       - ./init-db:/docker-entrypoint-initdb.d
       - ./db-data:/var/lib/mysql
