--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "netlify deploy --prod"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "nodemon": "^3.1.9"
+    "netlify-cli": "^18.0.0",
+    "netlify-lambda": "^2.0.16",
+    "nodemon": "^3.1.9",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "cors": "^2.8.5",
