--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
     "build": "netlify deploy --prod"
   },
   "keywords": [],
@@ -14,12 +13,8 @@
     "netlify-cli": "^18.0.0",
     "netlify-lambda": "^2.0.16",
     "nodemon": "^3.1.9",
-    "serverless-http": "^3.2.0"
-  },
-  "devDependencies": {
+    "serverless-http": "^3.2.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "mysql2": "^3.11.5"
+    "dotenv": "^16.4.7"
   }
 }
