--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "dockernodejs",
+  "name": "ep1",
   "version": "1.0.0",
+  "description": "---",
   "main": "index.js",
   "scripts": {
-    "build": "netlify deploy --prod"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "netlify-cli": "^18.0.0",
+    "express": "^4.19.2",
+    "netlify-cli": "^17.23.1",
     "netlify-lambda": "^2.0.16",
-    "nodemon": "^3.1.9",
-    "serverless-http": "^3.2.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7"
+    "serverless-http": "^3.2.0"
   }
 }
