--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,10 @@
 {
   "name": "dockernodejs",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,8 @@
   "devDependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "mongoose": "^7.2.2",
+    "mqtt": "^4.3.7",
     "express": "^4.21.2",
     "mysql2": "^3.11.5"
   }
