--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
       MYSQL_DATABASE: test
       MYSQL_USER: makerz
       MYSQL_PASSWORD: P@ssword1234
+      APP_VERSION: 2.0.0
     ports:
       - "3306:3306"
     volumes:
