--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,3 @@
-# version: "3.8"
-
-# services:
-#   db:
-#     image: mysql:8.0.33  # Use a specific version that supports mysql_native_password
-#     environment:
-#       MYSQL_ROOT_PASSWORD: P@ssword1234
-#       MYSQL_DATABASE: test
-#       MYSQL_USER: makerz
-#       MYSQL_PASSWORD: P@ssword1234
-#     volumes:
-#       - ./init-db:/docker-entrypoint-initdb.d
-#       - ./db-data:/var/lib/mysql
-#     ports:
-#       - '3306:3306'
-#     networks:
-#       - mynetwork
-
-#   api:
-#     build: .
-#     environment:
-#       DB_HOST: db
-#       DB_USER: makerz
-#       DB_PASSWORD: P@ssword1234
-#       DB_DATABASE: test
-#     ports:
-#       - '5000:5000'
-#     depends_on:
-#       - db
-#     networks:
-#       - mynetwork
-
-# networks:
-#   mynetwork:
-#     driver: bridge
-
 version: '3.8'
 
 services:
@@ -108,35 +72,20 @@ services:
       MONGO_URI: mongodb://root:P@ssword1234@mongo:27017/device_logs?authSource=admin
       MQTT_BROKER: mqtt://emqx
 
-  ### Frontend - Ionic ###
-  # frontend:
-  #   build: ./frontend
-  #   container_name: frontend
-  #   restart: always
-  #   depends_on:
-  #     - backend
-  #   ports:
-  #     - "8100:8100"
-
-  # api:
-  #   build: .
-  #   environment:
-  #     DB_HOST: db
-  #     DB_USER: makerz
-  #     DB_PASSWORD: P@ssword1234
-  #     DB_DATABASE: test
-  #   ports:
-  #     - '3000:3000'
-  #   depends_on:
-  #     - db
-  #   networks:
-  #     - mynetwork
+  ## Frontend - Ionic ###
+  frontend:
+    image: nginx:alpine
+    container_name: frontend
+    restart: always
+    depends_on:
+      - backend
+    ports:
+      - "80:80"
+    volumes:
+      - ./frontend/build:/usr/share/nginx/html:ro
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
 
 volumes:
   mysql_data:
   mongo_data:
   node_red_data:
-
-networks:
-  mynetwork:
-    driver: bridge
