--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,12 @@ services:
       - mysql_data:/var/lib/mysql
     networks:
       - mynetwork
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      retries: 3
+      start_period: 20s
+      timeout: 5s
 
   ### MQTT Broker - EMQX ###
   emqx:
@@ -41,7 +47,7 @@ services:
     container_name: node-red
     restart: always
     ports:
-      - "1880:1880" # External Dashboard Access
+      - "1880:1880"
     volumes:
       - node_red_data:/data
     networks:
@@ -53,8 +59,10 @@ services:
     container_name: backend
     restart: always
     depends_on:
-      - mysql
-      - emqx
+      mysql:
+        condition: service_healthy
+      emqx:
+        condition: service_started
     ports:
       - "3000:3000"
     environment:
@@ -72,7 +80,8 @@ services:
     container_name: frontend
     restart: always
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
     ports:
       - "80:80"
     volumes:
