--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,7 +85,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./frontend/build:/usr/share/nginx/html:ro
+      - ./frontend:/usr/share/nginx/html:ro
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     networks:
       - mynetwork
