--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - ./init-db:/docker-entrypoint-initdb.d
+      - ./backend/init-db:/docker-entrypoint-initdb.d  # Ensure correct path
       - mysql_data:/var/lib/mysql
     networks:
       - mynetwork
