--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,24 @@
 version: "3.8"
 
 services:
-  ### DATABASE - MySQL ###
-  mysql:
-    image: mysql:8
-    container_name: mysql
+  ### DATABASE - PostgreSQL ###
+  postgres:
+    image: postgres:15
+    container_name: postgres
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: P@ssword1234
-      MYSQL_DATABASE: test
-      MYSQL_USER: makerz
-      MYSQL_PASSWORD: P@ssword1234
+      POSTGRES_DB: test
+      POSTGRES_USER: makerz
+      POSTGRES_PASSWORD: P@ssword1234
     ports:
-      - "3306:3306"
+      - "5432:5432"
     volumes:
-      - ./backend/init-db:/docker-entrypoint-initdb.d  # Ensure correct path
-      - mysql_data:/var/lib/mysql
+      - ./backend/init-db:/docker-entrypoint-initdb.d
+      - pg_data:/var/lib/postgresql/data
     networks:
       - mynetwork
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      test: ["CMD-SHELL", "pg_isready -U makerz"]
       interval: 10s
       retries: 3
       start_period: 20s
@@ -31,23 +30,23 @@ services:
     container_name: emqx
     restart: always
     ports:
-      - "1883:1883"   # MQTT
-      - "8083:8083"   # MQTT over WebSocket (ws://)
-      - "8084:8084"   # MQTT over Secure WebSocket (wss://)
-      - "8081:8081"   # EMQX Dashboard (HTTP)
-      - "18083:18083" # External Dashboard Access
-      - "8883:8883"   # Secure MQTT (mqtts://)
+      - "1883:1883"
+      - "8083:8083"
+      - "8084:8084"
+      - "8081:8081"
+      - "18083:18083"
+      - "8883:8883"
     environment:
       EMQX_ALLOW_ANONYMOUS: "true"
-      EMQX_LISTENER__WS__DEFAULT__ENABLE: "true"  # Enable WebSocket (ws)
-      EMQX_LISTENER__WSS__DEFAULT__ENABLE: "true" # Enable Secure WebSocket (wss)
-      EMQX_LISTENER__WSS__DEFAULT__ACCEPTORS: 16  # Max Connections
+      EMQX_LISTENER__WS__DEFAULT__ENABLE: "true"
+      EMQX_LISTENER__WSS__DEFAULT__ENABLE: "true"
+      EMQX_LISTENER__WSS__DEFAULT__ACCEPTORS: 16
       EMQX_LISTENER__WSS__DEFAULT__MAX_CONNECTIONS: 1024000
       EMQX_LISTENER__WSS__DEFAULT__SSL__ENABLE: "true"
       EMQX_LISTENER__WSS__DEFAULT__SSL__KEYFILE: "/etc/emqx/certs/key.pem"
       EMQX_LISTENER__WSS__DEFAULT__SSL__CERTFILE: "/etc/emqx/certs/cert.pem"
     volumes:
-      - ./emqx_certs:/etc/emqx/certs  # Mount SSL Certificates
+      - ./emqx_certs:/etc/emqx/certs
     networks:
       - mynetwork
 
@@ -69,17 +68,18 @@ services:
     container_name: backend
     restart: always
     depends_on:
-      mysql:
+      postgres:
         condition: service_healthy
       emqx:
         condition: service_started
     ports:
       - "3000:3000"
     environment:
-      MYSQL_HOST: mysql
-      MYSQL_USER: makerz
-      MYSQL_PASSWORD: P@ssword1234
-      MYSQL_DATABASE: test
+      DB_HOST: postgres
+      DB_USER: makerz
+      DB_PASSWORD: P@ssword1234
+      DB_NAME: test
+      DB_PORT: 5432
       MQTT_BROKER: mqtt://emqx
     networks:
       - mynetwork
@@ -107,7 +107,7 @@ services:
       - mynetwork
 
 volumes:
-  mysql_data:
+  pg_data:
   node_red_data:
 
 networks:
