--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,3 @@
 PORT=4000
-DATABASE_URL=postgresql://postgres:password@postgres:5432/mydb
-REDIS_HOST=redis
-REDIS_PORT=6379
+DATABASE_URL=postgresql://makerz:P@ssword1234@postgres:5432/test
 JWT_SECRET=your_jwt_secret
