--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,6 +105,12 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     networks:
       - mynetwork
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost || exit 0"]
+      interval: 10s
+      retries: 3
+      start_period: 10s
+      timeout: 5s 
 
 
 volumes:
