--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,26 +91,26 @@ services:
       timeout: 5s
 
   ## Frontend - Ionic ###
-  frontend:
-    image: nginx:alpine
-    container_name: frontend
-    restart: always
-    depends_on:
-      backend:
-        condition: service_healthy
-    ports:
-      - "80:80"
-    volumes:
-      - ./frontend:/usr/share/nginx/html:ro
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-    networks:
-      - mynetwork
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost || exit 0"]
-      interval: 10s
-      retries: 3
-      start_period: 10s
-      timeout: 5s 
+  # frontend:
+  #   image: nginx:alpine
+  #   container_name: frontend
+  #   restart: always
+  #   depends_on:
+  #     backend:
+  #       condition: service_healthy
+  #   ports:
+  #     - "80:80"
+  #   volumes:
+  #     - ./frontend:/usr/share/nginx/html:ro
+  #     - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+  #   networks:
+  #     - mynetwork
+  #   healthcheck:
+  #     test: ["CMD-SHELL", "curl -f http://localhost || exit 0"]
+  #     interval: 10s
+  #     retries: 3
+  #     start_period: 10s
+  #     timeout: 5s 
 
 
 volumes:
