update: fixed :fire:

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT=4000
-DATABASE_URL=postgresql://makerz:P@ssword1234@postgres:5432/test
+# DATABASE_URL=postgresql://makerz:P@ssword1234@postgres:5432/test
+DATABASE_URL=postgresql://makerz:P@ssword1234@localhost:5432/test
 JWT_SECRET=your_jwt_secret
