update: fixed :fire:

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
 PORT=4000
-DATABASE_URL=postgresql://makerz:P@ssword1234@postgres:5432/test
-# DATABASE_URL=postgresql://makerz:P@ssword1234@localhost:5432/test
+# DATABASE_URL=postgresql://makerz:P@ssword1234@postgres:5432/test # on server with docker use this
+# DATABASE_URL=postgresql://makerz:P@ssword1234@localhost:5432/test # on local machine without docker use this
+DATABASE_URL=postgresql://makerz:P@ssword1234@151.106.113.75:5432/test # on server online with docker use this 
 JWT_SECRET=your_jwt_secret
